<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParentLogin"
    android:orientation="vertical"
    android:id="@+id/container"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/kids_code_logo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="25sp"
        android:layout_marginBottom="25dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="A parent must Login"/>

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/editText_password"
            android:layout_width="190dp"
            android:password="true"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="181dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:background="#68c2e8"
        android:onClick="login"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:text="@string/create_account_click"
            android:layout_marginRight="5dp"/>
        <!--
            This textView is in bold because when clicked the onclickListener is activated
            which starts a nw activity
            -->
        <TextView
            android:id="@+id/here_text_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="intentRegister"
            android:text="@string/here"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#68c2e8"/>


    </LinearLayout>


</LinearLayout>